nickel-lang-cli/tests/snapshot/inputs/errors/interpolate_record_type_field.ncl
# capture = 'stderr'
# command = []

let a = "foo" in { "%{a}" : Number }
